# flypulator

./: CHANGELOG  README.md
flypulator/: package.xml
flypulator/launch/: gazebo.launch
flypulator_common_msgs/: package.xml
flypulator_control/: CMakeLists.txt  package.xml
flypulator_description/: CMakeLists.txt  package.xml
flypulator_description/param/: aero_param.yaml  control_joint_names.yaml  drone_parameter.yaml
flypulator_description/urdf/: hexarotor_igs.urdf
flypulator_description_new/urdf/: component_snippets.xacro  multirotor_base.xacro
flypulator_gazebo_plugin/: CMakeLists.txt  package.xml
flypulator_gazebo_plugin/src/: control_plugin.cpp  fake_sensor_plugin.cpp  propulsion_plugin.cpp
flypulator_launch/: CMakeLists.txt  package.xml
flypulator_launch/launch/: controller.launch  gazebo.launch  gazebo_joystick.launch
flypulator_teleoperation/: package.xml
flypulator_traj_generator/: CMakeLists.txt  package.xml
