<package format="2">
  <name>flypulator_common_msgs</name>
  <version>1.0.0</version>
  <description>The common messages package</description>

  <maintainer email="jinyao383@hotmail.com">Jinyao Zhu</maintainer>
  <author email="leonhartyao@gmail.com">Chao Yao</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>  
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
