
<package>
  <name>flypulator_gazebo_plugin</name>
  <version>0.0.1</version>
  <description>The gazebo plugin package</description>

  <maintainer email="chao.yao@tu-dresden.de">Chao Yao</maintainer>
  <maintainer email="Jinyao383@hotmail.com">Jinyao Zhu</maintainer>
  
  <author email="qiang.ge@mailbox.tu-dresden.de">Qiang Ge</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>flypulator_common_msgs</build_depend>
  
  <run_depend>flypulator_common_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>gazebo</run_depend>

</package>
