<package format="2">
  <name>flypulator_gazebo_plugin</name>
  <version>1.0.0</version>
  <description>The gazebo plugin package</description>

  <maintainer email="chao.yao@tu-dresden.de">Chao Yao</maintainer>
  <maintainer email="Jinyao383@hotmail.com">Jinyao Zhu</maintainer>
  
  <author email="qiang.ge@mailbox.tu-dresden.de">Qiang Ge</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>std_srvs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf</depend>
  <depend>robot_state_publisher</depend>
  <depend>flypulator_common_msgs</depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

</package>
