<package format="2">
  <name>flypulator_launch</name>
  <version>1.0.0</version>
  <description>flypulator_launch contains centralized all launch files for flypulator ros packages</description>
  <maintainer email="chao.yao@tu-dresden.de">Chao Yao</maintainer>

  <license>GPLv3</license>

  <!-- <url type="website"></url> -->
  <url type="bugtracker">https://github.com/FLYing-maniPULATOR/flypulator/issues</url>

  <author email="chao.yao@tu-dresden.de">Chao Yao</author>
  <author email="Jinyao383@hotmail.com">Jinyao Zhu</author>
  <author email="qiang.ge@mailbox.tu-dresden.de">Qiang Ge</author>
  <author email="jan.krieglstein@gmail.com">Jan Krieglstein</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>


  <exec_depend>flypulator_description</exec_depend>
  <exec_depend>flypulator_common_msgs</exec_depend>
  <exec_depend>flypulator_gazebo_plugin</exec_depend>
  <exec_depend>flypulator_traj_generator</exec_depend>
  <exec_depend>flypulator_teleoperation</exec_depend>
  <exec_depend>flypulator_control</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>

  <!--
  <export>
    <metapackage />
  </export>
  -->
</package>
