<package format="2">
  <name>flypulator_traj_generator</name>
  <version>1.0.0</version>
  <description>The trajectory_generator package provides 6D trajectories of different types: Linear trajectory and polynomial trajectory (fifth order polynomial).
  It publishes the trajectory as a trajectory_msgs/MultiDOFJointTrajectoryPoint to topic /trajectory periodically with frequency as determined by pose estimation. The trajectories can be requested by services "linear_trajectory" and "polynomial_trajectory". </description>

  <maintainer email="jan.krieglstein@tu-dresden.de">Jan Krieglstein</maintainer>
  <maintainer email="chao.yao@tu-dresden.de">Chao Yao</maintainer>

  <license>BSD</license>

  <author email="jan.krieglstein@tu-dresden.de">Jan Krieglstein</author> 


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
    
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

  <build_depend>message_generation</build_depend> <!-- turn srv files into source code for C++, python and other languages-->

  <exec_depend>message_runtime</exec_depend> <!-- turn srv files into source code for C++, python and other languages-->

</package>